# astrometry-camera-orchestrator

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  config.example.yaml  grab-solve.sh  grab.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: auto-release.sh  ci.yml  pr-release.yml  pr-validation.yml
camera_orchestrator/: __init__.py  __main__.py  cmd.py  composition.py  config.py  exif.py  grab.py  logger.py  models.py  pipeline.py  service.py  solve.py  solvers.py  watcher.py
camera_orchestrator/adapters/: __init__.py  exif.py
camera_orchestrator/application/: __init__.py  align_service.py  capture_service.py  grab_service.py  sequence_service.py  session_service.py  solve_service.py
camera_orchestrator/camera/: __init__.py  base.py  gphoto.py
camera_orchestrator/domain/: __init__.py  errors.py  optics.py
camera_orchestrator/interfaces/: __init__.py  cli.py
camera_orchestrator/log/: __init__.py  logger.py  suppressed.py
camera_orchestrator/solvers/: __init__.py  api.py  base.py  docker.py
docs/: 20260712-api-solver-integration.md  20260722-hexagonal-architecture.md  20260723-core-workflows.md  20260723-motorised-platform-tracking.md  20260723-session-align-sequence-manifest.md
scripts/: batch_solve.py
tests/: test_align_service.py  test_config.py  test_exif.py  test_grab.py  test_integration_solver.py  test_logger.py  test_models.py  test_pipeline.py  test_sequence_service.py  test_service.py  test_session_manifest_repo.py  test_session_service.py  test_solvers.py  test_storage.py
(+22 files in other folders)
